# wildsentinel-common

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD-PARTY-NOTICES
src/: CMakeLists.txt  array.h  config.h  delegate.h  format.h  idisposable.h  machine.h  pch.h  span.h  types.h  wsexception.h
src/arch/: cpu_arch.h
src/concurrency/: CMakeLists.txt
src/concurrency/collections/: blocking_queue.h  concurrent_queue.h  concurrent_unordered_map.h  concurrent_unordered_set.h  synchronized_queue.h
src/concurrency/detail/: aligned_space.h  allocator_traits.h  atomic_backoff.h  concurrent_monitor.h  concurrent_monitor_mutex.h  concurrent_queue_base.h  concurrent_unordered_base.h  hash_compare.h  helpers.h  node_handle.h  segment_table.h
src/imaging/: CMakeLists.txt  chroma_subsampling.cc  chroma_subsampling.h  color_space.cc  color_space.h  image.cc  image.h  image_buffer_exporter.cc  image_buffer_exporter.h  image_buffer_loader.cc  image_buffer_loader.h  image_buffer_type.cc  image_buffer_type.h  image_component.cc  image_component.h  image_compression_options.cc  image_compression_options.h  image_compression_type.cc  image_context.cc  image_context.h  image_converter.cc  image_converter.h  image_core.cc  image_decoder.cc  image_decoder.h  image_defs.cc  image_encoder.cc  image_encoder.h  image_encoding_type.cc  image_encoding_type.h  image_format.h  image_format_detector.h  image_pixel_traits.cc  image_tags.cc  image_tags.h  image_traits.cc  image_traits.h  pixel_align.cc  pixel_buffer.cc  pixel_component.cc  (+4 more)
src/imaging/color_spaces/: color_space.cc
src/imaging/color_spaces/cmyk/: cmyk_to_rgb_converter.cc  cmyk_to_srgb_converter.cc
src/imaging/color_spaces/gray/: gray_to_rgb_converter.cc  gray_to_srgb_converter.cc  gray_to_sycc_converter.cc
src/imaging/color_spaces/rgb/: rgb_to_cmyk_converter.cc  rgb_to_gray_converter.cc  rgb_to_sycc_converter.cc
src/imaging/color_spaces/srgb/: rgb_to_cmyk_converter.cc  rgb_to_gray_converter.cc  rgb_to_sycc_converter.cc
src/imaging/color_spaces/sycc/: sycc_to_gray_converter.cc  sycc_to_rgb_converter.cc  (+1 more)
src/imaging/pixel/: pixel_allowed_types.h  pixel_color_converter.cc  pixel_color_converter.h  pixel_converter.h  pixel_format.cc  pixel_format.h  pixel_format_constraints.cc  pixel_format_constraints.h  pixel_format_details.cc  pixel_format_details.h
src/imaging/pixel_formats/: pixel_converter.cc  pixel_format.cc  pixel_format_constraints.cc  pixel_format_details.cc
src/io/: CMakeLists.txt  buffer_stream.cc  buffer_stream.h  file_format.h  file_format_detector.h  file_handle.cc  file_handle.h  file_handler.cc  file_stream.cc  file_stream.h  memory_stream.cc  memory_stream.h  stream.cc  stream.h
src/io/streams/: buffer_stream.cc  file_stream.cc  memory_stream.cc
src/logging/: CMakeLists.txt  ilog_dispatcher.h  ilog_enricher.h  ilog_sink.h  ilogger.cc  ilogger.h  log_context.h  log_level.cc  log_level.h  logger.cc  logger.h  logger_configuration.cc  logger_configuration.h
src/logging/dispatchers/: async_log_dispatcher.cc  async_log_dispatcher.h  sync_log_dispatcher.cc  sync_log_dispatcher.h
src/logging/enrichers/: process_id_enricher.cc  process_id_enricher.h  thread_id_enricher.cc  thread_id_enricher.h
src/logging/events/: log_event.cc  log_event.h
src/logging/rendering/: message_renderer.cc  message_renderer.h
src/logging/sinks/: console_log_sink.cc  console_log_sink.h
src/pixel/: chroma_subsampling.cc  color_space.cc  pixel_component.cc  pixel_converter.cc  pixel_format.cc  pixel_format_constraints.cc  pixel_format_details.cc  pixel_plane.cc  pixel_traits.cc
src/pooling/: CMakeLists.txt  blocking_object_pool.h  iobject_pool.h  object_pool.h
src/status/: CMakeLists.txt  status.cc  status.h  status_code.cc  status_or.h
src/streams/: buffer_stream.cc  file_stream.cc  memory_owner_stream.cc  memory_stream.cc
src/string/: CMakeLists.txt  format.h  transparent_hash.h
src/threading/: CMakeLists.txt  cancellation_state.h  cancellation_token.cc  cancellation_token.h  cancellation_token_registration.cc  cancellation_token_registration.h  cancellation_token_source.cc  cancellation_token_source.h
src/ws/: CMakeLists.txt  array.h  config.h  delegate.h  idisposable.h  machine.h  reflection.h  span.h  system.h  types.h  wsexception.h
src/ws/concurrency/: CMakeLists.txt  blocking_queue.h  concurrent_queue.h  concurrent_unordered_map.h  concurrent_unordered_set.h  spin_mutex.h  synchronized_queue.h
src/ws/imaging/: CMakeLists.txt  chroma_subsampling.cc  color_space.cc  color_space.h  image.cc  image.h  image_buffer_exporter.cc  image_buffer_exporter.h  image_buffer_loader.cc  image_buffer_loader.h  image_buffer_type.cc  image_buffer_type.h  image_component.cc  image_component.h  image_compression_options.cc  image_compression_options.h  image_compression_type.cc  image_compression_type.h  image_context.cc  image_context.h  image_converter.cc  image_converter.h  image_decoder.cc  image_decoder.h  image_encoder.cc  image_encoder.h  image_format.h  image_format_detector.h  image_tags.h  image_traits.h  point.h
src/ws/io/: CMakeLists.txt  buffer_stream.cc  buffer_stream.h  directory.cc  directory.h  file.cc  file.h  file_access.h  file_format.h  file_format_detector.h  file_handle.cc  file_handle.h  file_mode.h  file_share.h  file_stream.cc  file_stream.h  memory_stream.cc  memory_stream.h  path.cc  path.h  stream.cc  stream.h
src/ws/logging/: CMakeLists.txt  ilog_dispatcher.h  ilog_enricher.h  ilog_sink.h  ilogger.cc  ilogger.h  log_context.h  log_level.cc  log_level.h  logger.cc  logger.h  logger_configuration.cc  logger_configuration.h
src/ws/pooling/: CMakeLists.txt  blocking_object_pool.h  iobject_pool.h  object_pool.h
src/ws/status/: CMakeLists.txt  status.cc  status.h  status_code.cc  status_code.h  status_or.h
src/ws/string/: CMakeLists.txt  format.h  string_hash.h  string_helpers.h
src/ws/threading/: CMakeLists.txt  cancellation_state.h  cancellation_token.cc  cancellation_token.h  cancellation_token_registration.h  cancellation_token_source.cc  cancellation_token_source.h
(+274 files in other folders)
